<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProShopping</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lectura_nfc">LecturaNfc</string>
    <string name="action_settings">Settings</string>
    <string name="mensaje">Debe buscar a lo largo del shopping este logo y acercar su dispositivo móvil</string>
    <string name="mensaje_est">Debe buscar en la barrera este logo y acercar su dispositivo móvil</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="title_activity_paquete">Productos del Paquete</string>
    <string name="title_activity_login">Login de Cliente</string>
    <string name="title_ent_sal_estacionamiento">Acceso al Estacionamiento</string>
    <string name="title_activity_registro">Registro de Cliente</string>
    <string name="title_activity_inicio">Bienvenido Cliente</string>
    <string name="title_menu_cliente">Opciones del Cliente</string>
    <string name="titulo_login">Registro de Entrada</string>
    <string name="titulo_formulario">Nuevo Cliente</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="bienvenido2">a tu Shopping amigo </string>
    <string name="usuario">Usuario</string>
    <string name="registro_nombre">Nombre Completo </string>
    <string name="registro_email">E-mail</string>
    <string name="pass">Contraseña</string>
    <string name="usuarioR">Entrar </string>
    <string name="btnLogin">Ingresar</string>
    <string name="btn_registro">Registrarme</string>
    <string name="veroferta">Ver Oferta</string>
    <string name="recibiroferta">Recibir Oferta</string>
    <string name="estacionamiento">Estacionamiento</string>
    <string name="usuarioNR"> Registrarse </string>
    <string name="title_activity_mostrar_paquetes">MostrarPaquetes</string>
    <string name="title_activity_pruebas_unitarias">Pruebas Unitarias</string>
    <string name="title_activity_cargar_imagen">Cargar Imagen</string>
    <string name="title_activity_canastode_compras">CanastodeCompras</string>
      <string name="create_pdf_button">New Button</string>
    <string name="create_pdf_file">Crear documento PDF</string>
    <string name="read_pdf_file">Leer documento PDF</string>
    <string name="email_pdf_file">Enviar PDF por Email</string>
     <string name="invoice_number">Nº</string>
    <string name="invoice_date">Date:</string>
    <string name="company">Company:</string>
    <string name="client_title">Client info</string>
    <string name="client_name">Client name:</string>
    <string name="client_telephone">Client telephone:</string>
    <string name="client_country">Client country:</string>
     <string name="detail_code">Code</string>
    <string name="detail_description">Description</string>
    <string name="detail_amount">Amount</string>
    <string name="detail_price">Price</string>
    <string name="detail_total">Total</string>
     <string name="invoice_subtotal">Subtotal:</string>
    <string name="invoice_tax">Tax:</string>
    <string name="pdf_hint">Enter text to be PDF\'d</string>
    <string name="pdf_go">Save And Share</string>
    <string name="titulo_transferencia_puntos">TransferenciaPuntos</string>
    <string name="titulo_activity_listado_compras">Listado_de_Mis_Compras</string>
</resources>